[package]
edition = "2021"
name = "http-server"
version = "1.6.1"

[[bin]]
name = "http-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
worker-lib = { path = "../worker-lib" }
